--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,15 +9,31 @@ environment:
 
 dependencies:
   CreditsLib:
-    git:  git://github.com/FarragoFiction/CharacterLib.git
-  RenderingLib:
-    git: git://github.com/FarragoFiction/RenderingLib.git
+    git:
+      url: git://github.com/FarragoFiction/CharacterLib.git
   DollLibCorrect:
-    git:  git://github.com/FarragoFiction/DollLibCorrect.git
+    git:
+      url: git://github.com/FarragoFiction/DollLibCorrect.git
+      ref: Dart-2.2.0
+  BlackJack:
+    git:
+      url: git://github.com/FarragoFiction/BlackJack.git
   CommonLib:
-    git: git://github.com/FarragoFiction/CommonLib.git
+    git:
+      url: git://github.com/FarragoFiction/CommonLib.git
+      ref: Dart-2.2.0
   TextEngine:
-    git: git://github.com/FarragoFiction/TextEngine.git
+    git:
+      url: git://github.com/FarragoFiction/TextEngine.git
+      ref: Dart-2.2.0
+  RenderingLib:
+    git:
+      url: git://github.com/FarragoFiction/RenderingLib.git
+      ref: Dart-2.2.0
+  ImageLib:
+    git:
+      url: git://github.com/FarragoFiction/ImageLib.git
+      ref: Dart-2.2.0
 
 dev_dependencies:
   build_runner: ^1.0.0
